# HO2

./: ,gitmodules  .gitignore  .gitmodules  CMakeLists.txt  HO2_0.1-1.0_all.deb  README.md  app.rc  build.bat  build.sh  configure.bat  configure.sh  run.bat  run.sh  sys_man_helper  test_hash.py
src/: CMakeLists.txt  main.c  main_win.c
src/benchmark/: main.c
src/childps/: child_ohno.h  child_ohno_openssl.c  child_ohno_openssl_func_ed.c  child_ohno_polarssl.c  child_ohno_polarssl_func_ed.c
src/helper_func/: files_helper.c  helper.h  net_helper.c  string_helper.c  sys_man_helper.c
src/tests/: kernel.cl  tests.c
